# BAMapi-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/BAMapi/: __init__.py  api.py  constants.py  exceptions.py  utils.py
tests/: conftest.py  test_api.py  test_consts.py  test_utils.py
tests/samples/: sample_cours_bbe.json
