[metadata]
name = BAMapi
description =  A Python library that provides a wrapper around Bank Al-Maghrib's official API,.
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    BAMapi
install_requires =
    pandas >= 2.0.1
    requests >= 2.30.0

python_requires = >=3.8
package_dir =
    = src

zip_safe = no