[metadata]
name = BAMapi
description = BAMapi is a lightweight and user-friendly Python wrapper for Bank Al-Maghrib's API.
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages =
    BAMapi

install_requires =
    requests >= 2.30.0

python_requires = >=3.8
package_dir =
    = src

zip_safe = no

[options.extras_require]
testing =
    tox==4.5.1
    Faker==18.7.0
    pytest==7.3.1
    pytest-cov==4.0.0
    pytest-faker==2.0.0

[options.package_data]
BAMapi = py.typed